--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
 						</ul>
 					</li>
 					<li class="dropdown">
+						<a href="#" class="dropdown-toggle waves-effect waves-light" data-toggle="dropdown" role="button" aria-expanded="false">Exercícios<span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li id="ajuda_sobre"><a href="javascript:go('');">Ainda não fiz</a></li>
+							<li id="ajuda_changelog"><a href="javascript:go('');">Ainda não fiz</a></li>
+						</ul>
+					</li>
+					<li class="dropdown">
 						<a href="#" class="dropdown-toggle waves-effect waves-light" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda<span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<li id="ajuda_sobre"><a href="javascript:go('ajuda_sobre');">Sobre esta documenta&ccedil;&atilde;o</a></li>
