--- a/pages/svn_links_ava.html
+++ b/pages/svn_links_ava.html
@@ -25,5 +25,6 @@
 		<td>http://sn-323485:18080/svn/20_Audiodescricao/</td>							<td>Áudiodescrição</td></tr>
 		<td>http://sn-323485:18080/svn/21_ProjetoMobile/</td>							<td>Projeto Mobile</td></tr>
 		<td>http://sn-323485:18080/svn/22_CTEletronica/</td>							<td>Curso técnico em eletrônica</td></tr>
+		<td>http://sn-323485:18080/svn/28_CTSeguranca/</td>							<td>Curso técnico em segurança</td></tr>
 	</tbody>
 </table>
